[OPYD-321] fixing admin toolbar on mobile white space

--- a/themes/openy_themes/openy_rose/css/styles.css
+++ b/themes/openy_themes/openy_rose/css/styles.css
@@ -683,9 +683,6 @@ body {
 .toolbar-vertical .top-navs.affix {
   margin-top: 0px;
 }
-.toolbar-vertical .viewport {
-  margin-top: 39px;
-}
 .toolbar-vertical .sidebar {
   top: 109px;
 }
